# P5_ML

./: .slugignore  Procfile  README.md  model_in_prod.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: deploy-heroku.yml
API/: app.py
kedro-pipeline/: README.md  input.csv
kedro-pipeline/P5/: BoW_traitement.pkl
kedro-pipeline/P5_for_deploy/: BoW_traitement.pkl  mlb.pkl  test_set.csv
kedro-pipeline/conf/base/: catalog.yml  parameters_predict_pipeline.yml
kedro-pipeline/mlruns/0/: meta.yaml
kedro-pipeline/mlruns/0/0dee4269cdee4219b9d3f195b0a10974/: meta.yaml
kedro-pipeline/mlruns/0/171e0db90daf431abb206a8bbfec6e8c/: meta.yaml
kedro-pipeline/mlruns/0/1d38e711be4d4713b544970dfa418531/: meta.yaml
kedro-pipeline/mlruns/0/1d5277a1d371476aafcef531c23a2514/: meta.yaml
kedro-pipeline/mlruns/0/1d964914b66e4398aecc102c936c6910/: meta.yaml
kedro-pipeline/mlruns/0/22efd1b8069741daac78233fe99659f3/: meta.yaml
kedro-pipeline/mlruns/0/27cdb955eb524e55a04755f76649bb8c/: meta.yaml
kedro-pipeline/mlruns/0/45bc31cb1a8648cf82d851a5d4cb758d/: meta.yaml
kedro-pipeline/mlruns/0/49499905ad304e94929e88c04f70eed8/: meta.yaml
kedro-pipeline/mlruns/0/5d01a98ab31048af823bfc50a3fdfd6f/: meta.yaml
kedro-pipeline/mlruns/0/6bf9cac815154e2b83c4601edf1cac39/: meta.yaml
kedro-pipeline/mlruns/0/701b0160bd1248cba59275d24bc14d8a/: meta.yaml
kedro-pipeline/mlruns/0/7fc54a79588d4973a9f0e7bf2fd5d934/: meta.yaml
kedro-pipeline/mlruns/0/aa3209cca3594d0e841aa4dbbf69508f/: meta.yaml
kedro-pipeline/mlruns/0/b4ed56b875bc471d8a28017077776e43/: meta.yaml
kedro-pipeline/mlruns/0/b6d22697117d42d59d78820eeba0b25a/: meta.yaml
kedro-pipeline/mlruns/0/baf38b0714df480a8ae45265fc64b60b/: meta.yaml
kedro-pipeline/mlruns/models/MultinomialNB_BoW/: meta.yaml
kedro-pipeline/src/kedro_pipeline/: __init__.py  __main__.py  pipeline_registry.py  settings.py  test.py
kedro-pipeline/tests/: test.py  test_run.py
kedro-pipeline/tests/pipelines/data_science/: test_pipeline.py
mlruns/0/: meta.yaml
prod-pipeline-bow/: README.md  pyproject.toml
prod-pipeline-bow/src/prod_pipeline_bow/: __init__.py  __main__.py  settings.py
prod-pipeline-bow/tests/: test_run.py
stream_lite/: app_streamlit.py
(+62 files in other folders)
